[metadata]
name = starlink-sdf
project = starlink.sdf
version = 0.71
author = Michael S. Gordon
author_email = msgordon.astro@gmail.com
description = Stand-alone python conversion tool for Starlink HDS/SDF/NDF files
license = GNU GPL v3
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
zip_safe = False
install_requires =
    astropy
    numpy
    starlink-pyast
    starlink-pyhds

[options.entry_points]
console_scripts =
    sdf2fits = starlink.sdf:main